--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -11,6 +11,8 @@ body {
     display: flex;
     width: 100%;
     height: 700px;
+    z-index: 5;
+    object-fit: cover;
 
 
 }
@@ -81,6 +83,7 @@ body {
     align-items: center;
     justify-content: center;
     gap: 180px;
+    margin-top: -55px;
     
     
 
@@ -147,7 +150,7 @@ body {
     align-items: center;
     justify-content: center;
     gap: 200px;
-    margin-top: -6%;
+    margin-top: 2%;
     background-color: #2C2C2C;
     height: 600px;
 
