--- a/src/styles/Produtos.module.css
+++ b/src/styles/Produtos.module.css
@@ -1,6 +1,37 @@
+body {
+    background-color: #CECECE;
+}
+
 .homeimg {
     display: flex;
     width: 100%;
+}
+
+.especialimg {
+    display: flex;
+    width: 100%;
+    height: 700px;
+    z-index: 5;
+    object-fit: cover;
+
+
+}
+
+.special {
+    h1 {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        position: absolute;
+        top: 1;
+        left: 0;
+        width: 100%;
+        z-index: 2;
+        padding: 100px;
+        font-weight: 20;
+    }
+
 }
 
 .INV {
@@ -20,4 +51,112 @@
     z-index: 2;
     /* Está acima da imagem */
 
+}
+
+.cards {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 200px;
+    margin: 5%;
+
+
+    p {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 10px;
+    }
+
+    h6 {
+        margin: 7px;
+        font-weight: 50;
+    }
+
+    h2 {
+        font-weight: 100;
+    }
+}
+
+.cardespecial {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 180px;
+    margin-top: -55px;
+    
+    
+
+
+    p {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 10px;
+    }
+
+    h6 {
+        margin: 7px;
+        font-weight: 50;
+    }
+
+    h2 {
+        font-weight: 100;
+    }
+}
+
+.card1 {
+    background-color: white;
+    padding: 30px;
+    border-radius: 20px;
+
+    hr {
+        margin: 15px;
+    }
+}
+
+.card2 {
+
+    position: absolute;
+    margin: 250px;
+    left: 390px;
+    background-color: white;
+    padding: 30px;
+    border-radius: 20px;
+
+    hr {
+        margin: 15px;
+    }
+    p{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    h2{
+         display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+     h6{
+         display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+}
+
+.cardsblack {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 200px;
+    margin-top: 2%;
+    background-color: #2C2C2C;
+    height: 600px;
+
+}
+
+.about {
+    color: #ECBD64;
+   margin-top: -9%;
 }
