--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -53,3 +53,10 @@
     /* Está acima da imagem */
 
 }
+
+h1{
+    display: flex;
+    padding: 7px;
+    font-family: "Inter", sans-serif;
+    font-weight: 100;
+}
