--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -25,6 +25,14 @@
         text-decoration: none;
         color: white;
         font-size: 20px;
+        font-family: "Inter", sans-serif;
+        font-weight: 300;
+        font-style: italic;
+
+        &:hover{
+            color: #ECBD64;
+        }
+
 
         &::after {
             content: '';
@@ -54,9 +62,10 @@
 
 }
 
-h1{
+h1 {
     display: flex;
     padding: 7px;
     font-family: "Inter", sans-serif;
     font-weight: 100;
+   font-style: italic;
 }
