--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -36,6 +36,7 @@ body {
     justify-content: center;
     gap: 200px;
     margin: 5%;
+    
 
 
     p {
@@ -60,8 +61,10 @@ body {
     align-items: center;
     justify-content: center;
     background-color: #2C2C2C;
-    height: 600px;
+    height: 650px;
     gap: 200px;
+
+
 
     p {
         display: flex;
@@ -95,10 +98,19 @@ body {
     padding: 20px;
     margin-top: 80px;
 
+    svg {
+        display: flex;
+        margin-left: 160px;
+        color: #ffa600;
+
+    }
+
 
     .container {
         display: flex;
         gap: 180px;
+        margin-top: -80px;
+        margin-bottom: 60px;
     }
 
 
@@ -130,7 +142,16 @@ body {
     padding: 30px;
     border-radius: 20px;
     margin-top: -10%;
-   
+    
+
+
+    svg {
+        display: flex;
+        margin-left: 160px;
+        color: #ffa600;
+
+    }
+
 
     hr {
         margin: 15px;
@@ -159,6 +180,7 @@ body {
     background-color: white;
     padding: 30px;
     border-radius: 20px;
+   
 
 
 
@@ -176,6 +198,7 @@ body {
     gap: 200px;
     margin-top: 2%;
     margin-top: 230px;
+
 
     p {
         display: flex;
@@ -228,6 +251,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: -5%;
+   
 
 
 
@@ -237,6 +262,8 @@ body {
         font-weight: 200;
         font-family: "Inter", sans-serif;
         margin-left: 150px;
+        margin: 100px;
+        
 
 
     }
@@ -246,6 +273,8 @@ body {
         font-weight: 200;
         font-family: "Inter", sans-serif;
         margin-right: 150px;
+        margin: 100px;
+        
         text-decoration: none;
 
         &:hover {
@@ -287,11 +316,11 @@ body {
 
     .card2 {
         display: flex;
-        left: 570px;
+        left: 625px;
         flex-direction: column;
         position: absolute;
         margin: 250px;
-
+       
         background-color: white;
         padding: 30px;
         border-radius: 20px;
@@ -304,18 +333,24 @@ body {
             display: flex;
             align-items: center;
             justify-content: center;
+            font-family: "Inter", sans-serif;
+            font-style: italic;
         }
 
         h2 {
             display: flex;
             align-items: center;
             justify-content: center;
+            font-weight: 200;
+            font-family: "Inter", sans-serif;
         }
 
         h6 {
             display: flex;
             align-items: center;
             justify-content: center;
+            font-weight: 200;
+            font-family: "Inter", sans-serif;
         }
 
     }
@@ -341,19 +376,13 @@ body {
 
 }
 
-svg {
+
+h5 {
     display: flex;
-    margin-left: 160px;
-    color: #ffa600;
+    font-weight: 200;
+    padding: 5px;
+    font-family: "Inter", sans-serif;
+    margin-top: -30px;
+
 
 }
-
- h5{
-        display: flex;
-        font-weight: 200;
-        padding: 5px;
-        font-family: "Inter", sans-serif;
-        margin-top: -30px;
-        
-        
-    }
