--- a/src/styles/Produtos.module.css
+++ b/src/styles/Produtos.module.css
@@ -1,11 +1,12 @@
 body {
     background-color: #CECECE;
+    position: relative;
 }
 
 .homeimg {
     display: flex;
-     
-   
+
+
 
     img {
         display: flex;
@@ -300,6 +301,11 @@ body {
     padding: 30px;
     border-radius: 20px;
 
+    .icone {
+        display: flex;
+        flex-direction: column;
+    }
+
     img {
         width: 200px;
         height: 200px;
@@ -310,22 +316,51 @@ body {
         margin: 15px;
     }
 
-   
-}
-
-svg {
-    display: flex;
-    margin-left: 160px;
-    color: #ffa600;
-
-}
-
- h5{
+    svg {
         display: flex;
-        font-weight: 200;
-        padding: 5px;
-        font-family: "Inter", sans-serif;
-        margin-top: -30px;
-        
-        
+        margin-left: 160px;
+        color: #ffa600;
+
     }
+
+
+}
+
+
+
+h5 {
+    display: flex;
+    font-weight: 200;
+    padding: 5px;
+    font-family: "Inter", sans-serif;
+    margin-top: -30px;
+
+
+}
+
+.bot {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    padding: 12px;
+    background-color: #363636;
+    text-decoration: none;
+    z-index: 5;
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    color: #ffa600;
+    font-family: "Inter", sans-serif;
+    font-style: italic;
+    gap: 12px;
+
+
+
+
+    &:hover {
+        cursor: pointer;
+    }
+
+
+}
