--- a/src/styles/Categorias.module.css
+++ b/src/styles/Categorias.module.css
@@ -8,7 +8,7 @@
   max-width: 100%;
   height: 100vh;
   display: flex;
-
+ object-fit: cover;
 
 }
 
@@ -110,6 +110,8 @@
     padding: 60px;
     border-radius: 25px;
     font-size: 24px;
+    font-family: "Inter", sans-serif;
+    font-weight: 200;
   }
 }
 
