--- a/src/styles/EditatProduto.module.css
+++ b/src/styles/EditatProduto.module.css
@@ -1,6 +1,7 @@
 .gradientbackground {
-    height: 100vh;
+    height: 100%;
     background: linear-gradient(to right, #ff0000, #7b1f4a, #001f5c);
+
 }
 
 .editarProduto {
@@ -52,6 +53,7 @@
                 width: 400px;
                 padding: 17px;
                 border-radius: 20px;
+                font-size: 18px;
                 border: none;
                 outline: none;
                 background-color: rgba(0, 0, 0, 0.5);
@@ -82,6 +84,7 @@
                 margin-top: 10px;
                 width: 400px;
                 padding: 17px;
+                font-size: 18px;
                 border-radius: 20px;
                 border: none;
                 outline: none;
@@ -113,6 +116,7 @@
                 margin-top: 10px;
                 width: 400px;
                 padding: 17px;
+                font-size: 18px;
                 border-radius: 20px;
                 border: none;
                 outline: none;
@@ -144,6 +148,7 @@
                 margin-top: 10px;
                 width: 400px;
                 padding: 17px;
+                font-size: 18px;
                 border-radius: 20px;
                 border: none;
                 outline: none;
@@ -169,11 +174,12 @@
                 width: 400px;
                 padding: 17px;
                 border-radius: 20px;
+                
                 border: none;
                 outline: none;
                 background-color: rgba(0, 0, 0, 0.5);
                 color: white;
-                font-size: 15px;
+                font-size: 18px;
                 appearance: none;
                 cursor: pointer;
                 font-weight: 200;
@@ -214,10 +220,12 @@
 
                 img {
                     object-fit: cover;
-                    width: 400px;
+                    background-color: rgba(0, 0, 0, 0.5);
+                    border-radius: 30px;
+                    padding: 15px;
+                    width: 300px;
                     height: 300px;
-
-                    margin-top: 100px;
+                    margin-top: 50px;
                 }
             }
         }
@@ -358,9 +366,45 @@
     }
 }
 
+.gradientbackground .botoes button {
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    padding: 12px 20px;
+    border-radius: 10px;
+    font-weight: 200;
+    font-family: "Inter", sans-serif;
+    border: none;
+    transition: background-color 0.3s ease;
+}
+
+.gradientbackground .botoes button:hover {
+    background-color: rgba(0, 0, 0, 0.7);
+    cursor: pointer;
+}
+
+
+
 label {
     color: white;
     font-weight: 200;
     font-family: "Inter", sans-serif;
     font-size: 22px;
+}
+
+
+hr {
+    margin-top: 30px;
+}
+
+.title {
+    h2 {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: 200;
+        font-family: "Inter", sans-serif;
+        font-size: 40px;
+        color: white;
+        padding: 20px;
+    }
 }
