--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -36,7 +36,7 @@ body {
     justify-content: center;
     gap: 200px;
     margin: 5%;
-    
+
 
 
     p {
@@ -142,7 +142,7 @@ body {
     padding: 30px;
     border-radius: 20px;
     margin-top: -10%;
-    
+
 
 
     svg {
@@ -172,6 +172,11 @@ body {
         font-weight: 200;
         font-family: "Inter", sans-serif;
     }
+
+    &:hover {
+        transform: scale(1.05);
+        transition: .6s;
+    }
 }
 
 .card3 {
@@ -180,12 +185,18 @@ body {
     background-color: white;
     padding: 30px;
     border-radius: 20px;
-   
+
 
 
 
     hr {
         margin: 15px;
+    }
+
+    &:hover {
+        transform: scale(1.05);
+        transition: .6s;
+        object-fit: cover;
     }
 }
 
@@ -244,6 +255,7 @@ body {
 
     hr {
         width: 1200px;
+        margin-top: 10px;
     }
 }
 
@@ -252,19 +264,18 @@ body {
     align-items: center;
     justify-content: center;
     margin-top: -5%;
-   
 
 
 
 
-    h2 {
+
+    h3 {
         color: #ffa600;
         font-weight: 200;
         font-family: "Inter", sans-serif;
-        margin-left: 150px;
         margin: 100px;
-        
-
+        margin-left: -65px;
+        font-size: 25px;
 
     }
 
@@ -272,9 +283,8 @@ body {
         color: white;
         font-weight: 200;
         font-family: "Inter", sans-serif;
-        margin-right: 150px;
+        margin-left: 20px;
         margin: 100px;
-        
         text-decoration: none;
 
         &:hover {
@@ -284,6 +294,7 @@ body {
 
     hr {
         width: 1200px;
+        margin-bottom: 20px;
     }
 }
 
@@ -320,7 +331,7 @@ body {
         flex-direction: column;
         position: absolute;
         margin: 250px;
-       
+
         background-color: white;
         padding: 30px;
         border-radius: 20px;
@@ -351,6 +362,13 @@ body {
             justify-content: center;
             font-weight: 200;
             font-family: "Inter", sans-serif;
+        }
+
+        a {
+            display: flex;
+            margin-top: 10px;
+            margin-left: 95px;
+            color: #ffa600;
         }
 
     }
