--- a/src/styles/Produtos.module.css
+++ b/src/styles/Produtos.module.css
@@ -127,6 +127,8 @@ body {
         font-family: "Inter", sans-serif;
     }
 
+
+
 }
 
 .cards,
@@ -297,7 +299,7 @@ body {
 
 
     h2 {
-        color: #ffa600;
+        color: #ECBD64;
         font-weight: 200;
         font-family: "Inter", sans-serif;
 
@@ -336,6 +338,12 @@ body {
         margin-left: 160px;
         color: #ffa600;
 
+    }
+
+    &:hover {
+        transform: scale(1.05);
+        transition: .6s;
+        object-fit: cover;
     }
 
 
