--- a/src/components/footer/style.module.css
+++ b/src/components/footer/style.module.css
@@ -4,7 +4,7 @@
   padding: 40px 20px;
   text-align: center;
   font-family: Arial, sans-serif;
- 
+
 }
 
 .footerContainer {
@@ -15,6 +15,8 @@
 .footerContainer h2 {
   font-size: 24px;
   margin-bottom: 10px;
+  font-weight: 200;
+  font-family: "Inter", sans-serif;
 }
 
 .footerContainer p {
@@ -34,10 +36,13 @@
   text-decoration: none;
   font-weight: 500;
   transition: color 0.3s ease;
+  font-weight: 200;
+  font-family: "Inter", sans-serif;
 }
 
 .footerLinks a:hover {
-  color: #ffd700; /* dourado no hover */
+  color: #ffd700;
+  /* dourado no hover */
 }
 
 hr {
