--- a/src/styles/CadastroProduto.module.css
+++ b/src/styles/CadastroProduto.module.css
@@ -132,12 +132,10 @@
         transition: background-color 0.3s ease;
     }
 
-    input{
+    input {
         display: flex;
-        
-    }
 
- 
+    }
 
 }
 
@@ -145,4 +143,42 @@
     display: flex;
     flex-direction: column;
     gap: 12px;
+}
+
+input[type="file"]::file-selector-button {
+    background-color: rgba(117, 117, 117, 0.5);
+    color: white;
+    border: none;
+    padding: 8px 14px;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: background 0.3s;
+}
+
+input[type="file"]::file-selector-button:hover {
+    background-color: #202020;
+}
+
+.preview {
+
+    margin-top: 50px;
+
+}
+
+.previewImg {
+    max-width: 250px;
+    max-height: 250px;
+    border-radius: 8px;
+    object-fit: cover;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 10px;
+
+}
+
+span {
+    display: none;
+    flex-direction: column;
+    color: white;
+    font-weight: 200;
+    font-family: "Inter", sans-serif;
 }
