--- a/src/styles/Produtos.module.css
+++ b/src/styles/Produtos.module.css
@@ -145,11 +145,12 @@ h5 {
 
     h2 {
         font-size: 2.1rem;      
-        color: #ECBD64;
+        color: #ffa600;
         font-family: "Inter", sans-serif;
         text-shadow: 2px 2px 4px black; /* cria sombra preta para destacar */
         font-weight: 200;
         margin-top: -300px;
+        font-style: italic;
      
     }
 
@@ -168,7 +169,7 @@ h5 {
     flex-wrap: wrap;
     justify-content: center;
     margin-top: -130px;
-    gap: 40px;
+    gap: 101px;
 
     h2 {
         font-weight: 200;
